# insight_streamlit

./: .env.example  .gitignore  README.md  app.py  convert_to_coreml.py  embedding_sandbox.py  generate_embeddings.py  ingest.py  main.py  pyproject.toml
.streamlit/: config.toml
InsightApp/: Package.swift  README.md
InsightApp/InsightApp/: ContentView.swift  InsightAppApp.swift
InsightApp/InsightApp.xcodeproj/: project.pbxproj
InsightApp/InsightApp.xcodeproj/xcuserdata/nathanre.xcuserdatad/xcschemes/: xcschememanagement.plist
InsightApp/InsightApp/Models/: SearchResult.swift
InsightApp/InsightApp/Services/: OpenAIService.swift  PineconeService.swift
InsightApp/InsightApp/Views/: ResultDetailView.swift  SearchView.swift
InsightApp/Sources/InsightApp/: Exports.swift  InsightApp.swift
InsightApp/Sources/InsightApp/Extensions/: BahaiLibraryURLMapper.swift
InsightApp/Sources/InsightApp/Models/: Author.swift  EmbeddingVector.swift  Paragraph.swift
InsightApp/Sources/InsightApp/Services/: BertTokenizer.swift  DocumentIngestionService.swift  EmbeddingService.swift  SemanticSearchEngine.swift  VectorStore.swift
InsightApp/Sources/InsightApp/ViewModels/: SearchViewModel.swift
InsightApp/Sources/InsightApp/Views/: ContentView.swift  FilterView.swift  MainTabView.swift  SettingsView.swift
InsightApp/Tests/: InsightAppTests.swift
InsightApp/Tools/EmbeddingGenerator/: Package.swift
InsightApp/Tools/EmbeddingGenerator/Sources/: main.swift
backend/: .env.example  .gitignore  README.md  package.json  server.js
backend/routes/: openai.js  pinecone.js
(+3 files in other folders)
