[project]
name = "insight-streamlit"
version = "0.1.0"
description = "Semantic search over the Baha'i Writings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coremltools>=9.0",
    "openai>=1.97.0",
    "pinecone>=7.3.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.47.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.5",
]
